XD-2293 Fix the bug that unable to load dataset if the list is too long

--- a/assets/stylesheets/less/partials/datastore.less
+++ b/assets/stylesheets/less/partials/datastore.less
@@ -1531,9 +1531,10 @@ table.datasetTable {
 
             .fileInfoMid {
                 .size(@width: 100%);
-                .flex(1 0 auto);
+                .flex(1 1 auto);
                 padding: 16px 0;
                 border-bottom: 1px solid @color-border-softGray;
+                overflow: hidden;
 
                 > div {
                     padding-left: 16px;
